nginx/nginx_deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: quay.io/prophetstor/federatorai-demo-nginx-php:stable
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: "0"
          requests:
            cpu: 200m
            memory: "0"
