nginx/nginx_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: nginx
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
